--- a/partner-front/package.json
+++ b/partner-front/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.3",
     "element-plus": "^2.2.32",
     "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
