--- a/partner-back/src/main/resources/application.yml
+++ b/partner-back/src/main/resources/application.yml
@@ -17,6 +17,19 @@ spring:
     servlet:
       load-on-startup: 1  # 启动的时候初始化DispatcherServlet
 
+  mail:
+    # 配置 SMTP 服务器地址
+    host: smtp.qq.com
+    # 发送者邮箱
+    username: 1132580253@qq.com
+    # 配置密码，注意不是真正的密码，而是刚刚申请到的授权码
+    password: lgjnowkcfoslfigd
+    # 端口号465或587
+    port: 587
+    # 默认的邮件编码为UTF-8
+    default-encoding: UTF-8
+
+
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
