--- a/partner-back/src/main/resources/application.yml
+++ b/partner-back/src/main/resources/application.yml
@@ -9,13 +9,13 @@ spring:
     password:
     hikari:
       minimum-idle: 10
-      connection-test-query: SELECT 1
+      connection-test-query: SELECT 1   #数据库连接初始化
   # swagger配置
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
     servlet:
-      load-on-startup: 1  # 启动的时候初始化DispatcherServlet
+      load-on-startup: 1  # 启动的时候初始化DispatcherServlet   进行初始化
 
   mail:
     # 配置 SMTP 服务器地址
