--- a/partner-back/pom.xml
+++ b/partner-back/pom.xml
@@ -83,6 +83,16 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
+        <!--  Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
 
     </dependencies>
 
@@ -106,6 +116,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.5</version>
                 <configuration>
                     <excludes>
                         <exclude>
