--- a/partner-back/src/main/resources/application.yml
+++ b/partner-back/src/main/resources/application.yml
@@ -16,7 +16,6 @@ spring:
       matching-strategy: ant_path_matcher
     servlet:
       load-on-startup: 1  # 启动的时候初始化DispatcherServlet   进行初始化
-
   mail:
     # 配置 SMTP 服务器地址
     host: smtp.qq.com
@@ -28,7 +27,27 @@ spring:
     port: 587
     # 默认的邮件编码为UTF-8
     default-encoding: UTF-8
-
+  redis:
+    # Redis数据库索引（默认为0）
+    database: 0
+    # Redis服务器地址
+    host: 127.0.0.1
+    # Redis服务器连接端口
+    port: 6379
+    # Redis服务器连接密码（默认为空）
+    # password:
+    # 连接超时时间
+    timeout: 10s
+    lettuce:
+      pool:
+        # 连接池最大连接数
+        max-active: 200
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1ms
+        # 连接池中的最大空闲连接
+        max-idle: 10
+        # 连接池中的最小空闲连接
+        min-idle: 0
 
 
 mybatis-plus:
