2023年3月5日，后端个人中心和文件上传下载实现

--- a/partner-back/src/main/resources/application.yml
+++ b/partner-back/src/main/resources/application.yml
@@ -71,3 +71,9 @@ sa-token:
   token-prefix: Bearer
   # jwt秘钥
   jwt-secret-key: asdasdasifhueuiwyurfewbfjsdafjk
+
+file:
+  upload:
+    path: E:\IdeaProjects\partner
+  download:
+    ip: localhost
