--- a/partner-manager/package.json
+++ b/partner-manager/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.3.4",
     "element-plus": "^2.2.33",
     "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
