--- a/partner-back/pom.xml
+++ b/partner-back/pom.xml
@@ -48,6 +48,8 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.10</version>
         </dependency>
+
+        <!--导入导出，操作excel-->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
